--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "private": true,
   "engines": {
-    "node": "14.17.0"
+    "node": "12.16.3",
+    "npm": "7.15.0"
   },
   "repository": {
     "type": "git",
