--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Linked Scrapper Server made with Node.js",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "private": true,
   "engines": {
